# brep-kernel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/shaders/: nurbs_tessellate.wgsl
benches/: kernel_bench.rs
corpus/reference/v1/: cube_2.golden  cube_2.model  cube_minus_cylinder_64.golden  cube_minus_cylinder_64.model  nl_bracket_two_m4.golden  nl_bracket_two_m4.model  (+2 more)
corpus/regression/: cube_minus_cylinder.case  near_collinear_orient2d.case  near_coplanar_orient3d.case
docs/: EulerOperators.md  FeatureLayer.md  KernelArchitecture.md  NumericalRobustness.md  Profiling.md  PublicApi.md  ReferenceModels.md  Tutorials.md
examples/: boolean_diagnostics.rs  exchange_roundtrip.rs  transactional_topology.rs
src/: api.rs  boolean.rs  errors.rs  euler.rs  exchange.rs  features.rs  geometry.rs  intersection.rs  lib.rs  math.rs  nurbs.rs  predicates.rs  tessellation.rs  topology.rs  wasm.rs
tests/: boolean_classification.rs  boolean_intersection_graph.rs  boolean_mesh_healing.rs  diagnostics.rs  edge_curves.rs  euler_operators.rs  exchange.rs  face_splitting.rs  feature_layer.rs  nurbs_geometry.rs  persistent_history.rs  predicates_intersections.rs  property_solids.rs  public_api.rs  reference_models.rs  regression_corpus.rs  sewing.rs  topology_boolean.rs  topology_transactions.rs  trim_topology.rs
tests/common/: mod.rs
web/: app.js  index.html  styles.css
